<?xml version="1.0"?>
<package format="2">
  <name>hieroglyph</name>
  <version>1.0.0</version>
  <description>hieroglyph : message interface for kheops/papyrus application</description>

  <maintainer email="pierre.delarboulas@instar-robotics.com">Pierre Delarboulas</maintainer>
  <license>CeCILL v2.1</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hieroglyph</url> -->

  <author email="pierre.delarboulas@instar-robotics.com">Pierre Delarboulas</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>

</package>
